# Todo

./: Dockerfile  README.md  docker-compose.yml  hypercorn.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/: commands.py  settings.py  utils.py
src/data/: db.py  repository.py  result.py  sql.py
src/data/migrations/: _000_initial.py  _001_todos_add_name.py  __init__.py
src/domain/: models.py  types.py
src/service/: _base.py  schemas.py  task.py  todo.py  validation.py
src/web/api/: __init__.py  schemas.py  task.py  todo.py
tests/: conftest.py  fixtures.py
tests/end_to_end/: test_api.py
tests/unit/api/: test_handlers.py  test_schemas.py  test_task_handlers.py  test_todo_handlers.py
tests/unit/data/: test_repository.py
tests/unit/domain/: test_models.py
tests/unit/service/: test_schemas.py  test_task.py  test_todo.py
