[project]
name = "TodoAPI"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "dynamicsamic", email = "mirabyansr@gmail.com" }]
dependencies = [
    "aiofiles==24.1.0",
    "annotated-types==0.7.0",
    "anyio==4.4.0",
    "asyncpg==0.29.0",
    "blinker==1.8.2",
    "certifi==2024.7.4",
    "click==8.1.7",
    "coverage==7.6.1",
    "Flask==3.0.3",
    "h11==0.14.0",
    "h2==4.1.0",
    "hpack==4.0.0",
    "httpcore==1.0.5",
    "httpx==0.27.0",
    "Hypercorn==0.17.3",
    "hyperframe==6.0.1",
    "idna==3.7",
    "iniconfig==2.0.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "MarkupSafe==2.1.5",
    "packaging==24.1",
    "pluggy==1.5.0",
    "priority==2.0.0",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "pydantic-core==2.20.1",
    "pyhumps==3.8.0",
    "python-dotenv==1.0.1",
    "Quart==0.19.6",
    "quart-schema==0.20.0",
    "sniffio==1.3.1",
    "typing-extensions==4.12.2",
    "Werkzeug==3.0.3",
    "wsproto==1.2.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "flake8>=7.1.1",
    "black>=24.8.0",
]

[tool.black]
line-length = 88
exclude = "migrations|sql"

[tool.pdm.scripts]
init_db = "quart --app=main:app init_db"
migrate = "quart --app=main:app migrate -f"
migrate_all = "quart --app=main:app migrate -a"
prepare_db = {composite = ["init_db", "migrate_all"]}
load_test_data = "quart --app=main:app load_data"
drop_db = "quart --app=main:app migrate -ad"

dev_server = "quart --app=main:app run"
prod_server = "hypercorn --config hypercorn.toml main:app"
start_dev_app = {composite = ["prepare_db","load_test_data", "dev_server"]}
start_app = {composite = ["prepare_db", "prod_server"]}

lint = {composite = [
    "flake8 src --exclude=src/data/migrations,src/data/sql.py --max-line-length=88", 
    "black --check src"]}
test = "pytest --cov=app --cov=tests --cov-report term-missing"
